make MethodExtractor find all methods.